fixed login alignment issues, made responsive

--- a/sass/components/_login.sass
+++ b/sass/components/_login.sass
@@ -8,19 +8,19 @@
     background: lighten($primary-bg-color, 10%)
     border: 5px solid $primary-border-color
     margin-top: 2%
+    display: flex
+    flex-flow: column nowrap
+    align-items: center
 
     .loginHeader
       text-align: center
 
-    .loginInputs
-      margin-left: 15%
+    .buttonGroup
+      display: flex
+      justify-content: center
 
-    .loginButtons
-      display: inline-block
-      margin: 2%
-      position: relative
-      left: 140px
-      bottom: 20px
+      button
+        margin: 0 1% 0 1%
 
     .or
       text-align: center
